--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
   Powered by github.io since 2019.06
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "wallsee.org" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://jibenfa.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
