--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ paginate: 20
 title : Welcome to Coffeecat‘s Blog
 tagline: 一个不务正业的CISSP
 assets: /assets
-url:
+url: "http://jibenfa.github.io"
 baseurl:
 
 #### Language
