--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 #### Exclude
 exclude: [".rvmrc", ".rbenv-version", "README.md", "README_en.md", "Rakefile", "changelog.md"]
 
-#### Code Highlighter
-# 'pygments' is unsupported on GitHub Pages now.
-highlighter: rouge
+#### Code Style
+# From https://cdn.jsdelivr.net/npm/highlight.js@11.11.1/styles/
+codestyle: base16/dirtysea.css
 
 #### Permalink
 # For more see: http://jekyllrb.com/docs/permalinks/
@@ -34,7 +34,6 @@ assets: /assets
 url: "https://jibenfa.github.io"
 github_username:  jibenfa
 baseurl:
-
 
 #### Language
 language: zh-CN    ## blog site languages: en, zh-CN, zh-TW, de
