--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "README_en.md", "Rakefile", "
 #### Code Style
 # Downloaded From https://cdn.jsdelivr.net/npm/highlight.js@11.11.1/styles/
 # Put it in assets/css/
+# use it with highlight.js, from https://www.jsdelivr.com/package/gh/highlightjs/cdn-release?tab=files&path=build%2Fes
 codestyle: dirtysea.css
+
 
 #### Permalink
 # For more see: http://jekyllrb.com/docs/permalinks/
