change code format
repalce all <pre><code class='lanuage-xxx'>...</code><pre> to ```xxx ... ```

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@
 exclude: [".rvmrc", ".rbenv-version", "README.md", "README_en.md", "Rakefile", "changelog.md"]
 
 #### Code Style
+# https://github.com/highlightjs/highlight.js
 # Downloaded From https://www.jsdelivr.com/package/gh/highlightjs/cdn-release?tab=files&path=build%2Fstyles%2Fbase16
 # Put it in assets/css/
-# use it with highlight.js and language folder, from https://www.jsdelivr.com/package/gh/highlightjs/cdn-release?tab=files&path=build%2Fes
+# use it with highlight.js and language folder in assets/js/, from https://www.jsdelivr.com/package/gh/highlightjs/cdn-release?tab=files&path=build%2Fes
 # preview style at https://highlightjs.org/demo
 codestyle: dirtysea.css
 
@@ -17,7 +18,9 @@ permalink: pretty
 # 'redcarpet' is unsupported on GitHub Pages now.
 markdown: kramdown
 kramdown:
-    input: GFM
+  input: GFM
+
+
 
 #### Default Attributes
 defaults:
